# LinuxApplicationDevelopment2022

./: .gitmodules  CMakeLists.txt
01_GitBuildReq/: CMakeLists.txt  main.c
02_TerminalProject/: CMakeLists.txt  Makefile  Show.c
03_Multifile/: Makefile  fun.c  outlib.h  prog.c
04_Text/: cal.txt  randomize.sh
05_Debugging/: Makefile  range.c  task1.py  task2.py  test1.txt  test2.txt
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  move.c  unlink_wrapper.c
08_Environmental/: CMakeLists.txt
08_Environmental/headers/: newline_get.h  newline_read.h
08_Environmental/libs/: newline_get.c  newline_read.c
08_Environmental/source/: rhasher.c
09_I18n/: CMakeLists.txt  bhello.c  hello  hello.c  hello.po  hello.pot
09_I18n/po/ru/: bhello.po
09_I18n/ru/LC_MESSAGES/: hello.mo
11_Testing/: CMakeLists.txt  index.html  test.c
11_Testing/GB99/: buf.h
